--- a/css/index.css
+++ b/css/index.css
@@ -1,31 +1,136 @@
-html, body {
+body, html {
 	height:100%;
-	overflow:visible;
 }
 
-body {
-	box-sizing:border-box;
-	padding-top: 50px;
- 	/*padding-bottom: 20px;*/
+.content {
+	min-height:100%;
+	position:relative;
+	padding-bottom:220px;
 }
 
-.block {
-	box-sizing:border-box;
+.centralizer {
+	width:80%;
 	height:100%;
+	margin:0 auto;
+	position: relative;
+	clear:both;
+}
+
+header {
+	box-sizing:border-box;
+	padding:20px 0;
+	overflow: hidden;
+}
+
+header nav span:before {
+	content:" ";
+}
+
+header nav a, header nav span {
+	text-decoration:inherit;
+	color:inherit;
+	font-family:monospace;
+}
+
+header .logo {
+	border-radius:50%;
+	background-color:#FFDF00;
+	width:80px;
+	height:80px;
+	float:left;
+	margin-right:10px;
+	line-height:100px;
+	text-align:center;
+}
+
+header h1  {
+	padding-top:10px;
+	margin:0;
+}
+
+@media only screen and (max-width: 480px) {
+	header h1 {
+		padding-top:10px;
+		font-size:28px;
+	}
+	header nav {
+		clear:both;
+		text-align:center;
+		padding-top:10px;
+		font-size:16px;
+	}
+}
+
+.work {
+	background-color:rgb(144, 237, 144);
+	height:200px;
+	box-sizing:border-box;
+	padding:10px;
 	position:relative;
 }
 
-.jumbotron {
-	min-height:100%;
-	background-image:url(../img/clouds.jpg);
-	background-size: cover;
-	background-attachment: fixed;
+.work h2 {
+	font-family:monospace;
+	margin:0;
 }
 
-.window {
-	background-image:url(../img/clouds.jpg);
-	background-size: cover;
-	background-attachment: fixed;
-	height:200px;
-	width:100%;
+.work .main-tag {
+	position:absolute;
+	bottom:10px;
+	right:10px;
+	padding:5px;
+	background-color:black;
+	color:white;
+	font-family:monospace;
+	font-size:22px;
 }
+
+footer {
+	box-sizing:border-box;
+	width:100%;
+	height:200px;
+	margin-top:20px;
+	padding:20px;
+	background-color:black;
+	color:white;
+	position: absolute;
+	bottom: 0;
+}
+
+#about {
+	font-family:sans-serif;
+	box-sizing:border-box;
+	padding:40px;
+}
+
+#about h2 {
+	margin:0;
+}
+
+#profile-pic {
+	text-align:center;
+	overflow:hidden;
+}
+
+#profile-pic img {
+	border-radius:50%;
+	box-sizing:border-box;
+	border: 10px solid rgb(144, 237, 144);
+} 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
